--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,13 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
+    "mapbox-gl": "^0.43.0",
     "next": "^4.3.0-canary.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-display-name": "^0.2.3",
     "react-dom": "^16.2.0",
+    "react-mapbox-gl": "^3.4.1",
     "webpack-bundle-analyzer": "^2.9.1"
   },
   "devDependencies": {
