--- a/app/package.json
+++ b/app/package.json
@@ -16,21 +16,26 @@
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
     "mapbox-gl": "^0.43.0",
+    "namor": "^1.0.1",
     "next": "^4.3.0-canary.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-data-grid": "^2.0.78",
     "react-display-name": "^0.2.3",
     "react-dom": "^16.2.0",
     "react-mapbox-gl": "^3.4.1",
+    "react-table": "^6.7.6",
     "webpack-bundle-analyzer": "^2.9.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "babel-eslint": "^8.0.3",
     "eslint": "^4.13.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "prettier": "^1.9.2"
   },
   "scripts": {
